--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>App deployed with Github Pages</h1>
+    <p>This was created as a feature</p>
+    <script src="./js/app.js"></script>
 </body>
 </html>
